@@ -1,6 +1,8 @@
 Gaim: The Pimpin' Penguin IM Clone that's good for the soul!
 
 version 0.72
+	* Fixed a crash in the Add Chat dialog when selecting an
+	  account that doesn't support chats. Closes bug #821606.
 	* Swedish translation updated (Tore Lundqvist (luntor))
 
 version 0.71 (10/09/2003):
